Bug 924366 - Animated GIFs shouldn't loop before they have finished decoding. r=seth, a=lsblakk